Changes for 3.0.10rc1

New features:
A.F....... [ZBX-1357] updated Chinese (China), Czech, English (United States), Korean, Romanian, Ukrainian, Vietnamese translations; thanks to Zabbix translators (zalex_ua)
.......PS. [ZBXNEXT-3659] reduced cache locking time during configuration synchronization (wiper)

Bug fixes:
........S. [ZBX-12012] fixed resolving of Critical and Verbose event log levels by {ITEM.LOG.SEVERITY} macro (Sasha)
A......... [ZBX-12093] fixed removing of applications that are created from application prototypes (Sasha)
A.F....... [ZBX-10253] fixed translation string and validation of TLS settings in host.create(), host.update() and host.massUpdate() methods; added variables to hosts array required by CHost::validateUpdate() method (miks)
........S. [ZBX-12100] fixed new line handling in SSH agent with numeric type of information (vso)
..F....... [ZBX-9958] fixed wrongly displayed list view after mass update failure (miks)

--------------------------------------------------------------------------------
Changes for 3.0.9

3.0.9rc1 was released as 3.0.9 without any changes

--------------------------------------------------------------------------------
Changes for 3.0.9rc1

Bug fixes:
........S. [ZBX-12075] fixed security vulnerability with execution of the remote commands on server; thanks to Lilith Wyatt, Cisco Systems (gleb)
........S. [ZBX-12076] fixed security vulnerability with execution of the remote commands on proxy; thanks to Lilith Wyatt, Cisco Systems (gleb)
..F....... [ZBX-11024] fixed popup window size in actions configuration form (miks)
..F....... [ZBX-10997] fixed usage of wrong API in screen constructor (miks)
..F....... [ZBX-11477] fixed lost user name in profile title (miks)
A......... [ZBX-10373] fixed check for screen items overlap (gcalenko, Sasha)
........S. [ZBX-11889] fixed lastaccess update for passive proxy (viktors)
..F....... [ZBX-11960] fixed interface dragging in host edit page in Chome browser (vmurzins)